syntax = "proto3";

package distribution.v1;

service IteratorService {
    rpc Iterate(stream IteratorRequest) returns (stream IteratorResponse) {}
}

message IteratorRequest {
  int32 command = 1;
  int64 span = 2;
  TimeRange range = 3;
  int64 stamp = 4;
  repeated string keys = 5;
}

message Segment {
  string channel_key = 1;
  int64 start = 2;
  bytes data = 3;
}

message IteratorResponse {
  int32 variant = 1;
  int32 node_id = 2;
  bool ack = 3;
  int32 command = 4;
  string error = 5;
  repeated Segment segments = 6;
}

service WriterService {
  rpc Write(stream WriterRequest) returns (stream WriterResponse) {}
}

message WriterRequest {
  repeated string open_keys = 1;
  repeated Segment segments = 2;
}

message WriterResponse {
  string error = 1;
}

message TimeRange {
  int64 start = 1;
  int64 end = 2;
}